update CV and download link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p class="lead">A Final year, part-time Software Engineering student at Ulster University doing Computing Systems and have currently been working in Ad Tech for 3 years. Previously at Belfast Metropolitan College for a Foundation Degree in Software Engineering
         If you are interested you can download my CV below. Or contact me by email/Facebook from the social media bar on
         your left, unless your on mobile in which case your out of luck... lol, unless your phone has a trick up its sleev...phone-cas...debugger? I am sure there is somthing.</p>
-      <a href="./cv/MichaelWattersCV.docx"  download class="btn btn-secondary mb">Download my CV here!</a>
+      <a href="./cv/MichaelJohnWatters.pdf"  download class="btn btn-secondary mb">Download my CV here!</a>
       <img src="./img/Edited/laptopCV.png" alt="">
     </div>
   </section>
